[gd_scene load_steps=9 format=3 uid="uid://thvnxqkocf4w"]

[ext_resource type="Script" path="res://party_member.gd" id="1_0j8a1"]
[ext_resource type="Texture2D" uid="uid://cysr8ktgh28k0" path="res://images/balthazar.png" id="2_xsc85"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gesn5"]
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05qfo"]
bg_color = Color(0.513726, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_khr8v"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 0.138696, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_awk8l"]
resource_name = "dead"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x3kgf"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.97, 1.005), Vector2(1.005, 0.97)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4j674"]
_data = {
"attack": SubResource("Animation_khr8v"),
"dead": SubResource("Animation_awk8l"),
"idle": SubResource("Animation_x3kgf")
}

[node name="PartyMember" type="VBoxContainer"]
custom_minimum_size = Vector2(180, 180)
script = ExtResource("1_0j8a1")
party_member = "none"

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "Party Member"

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gesn5")
theme_override_styles/fill = SubResource("StyleBoxFlat_05qfo")
step = 1.0
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Character" type="Node2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="Sprite2D" type="Sprite2D" parent="Character"]
scale = Vector2(0.965884, 1.02321)
texture = ExtResource("2_xsc85")
offset = Vector2(0, -350)

[node name="Label" type="Label" parent="Character/Sprite2D"]
offset_left = -115.217
offset_top = -741.544
offset_right = 64.7829
offset_bottom = -688.544
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4j674")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4j674")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
